# tix

./: config.example.toml  pyproject.toml
docs/plans/: 2026-03-15-fix-p1-staleness-and-injection-plan.md  2026-03-15-fix-p2-review-findings-plan.md  2026-03-15-refactor-p3-cleanup-plan.md  2026-03-16-feat-card-notes-plan.md  2026-03-16-fix-double-cards-and-unknown-requester-plan.md  2026-03-16-fix-keybindings-and-warp-launcher-plan.md
src/tix/: app.py  config.py  errors.py  models.py  persistence.py  state_manager.py  subprocess_utils.py  sync.py
src/tix/css/: app.tcss
src/tix/screens/: board.py  note_editor.py  ticket_detail.py
src/tix/services/: deploy_tracker.py  pr_tracker.py  staleness.py  terminal_launcher.py  worktree.py  zendesk.py
src/tix/widgets/: card.py  column.py  status_bar.py
tests/: test_config.py  test_deploy_tracker.py  test_models.py  test_persistence.py  test_pr_tracker.py  test_staleness.py  test_state_manager.py  test_terminal_launcher.py  test_worktree.py  test_zendesk.py
