[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tix"
version = "0.1.0"
description = "Zendesk investigation tracker TUI"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0,<4.0",
    "httpx>=0.27",
]

[project.scripts]
tix = "tix.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
